prevent guess flag overflow

--- a/index.css
+++ b/index.css
@@ -80,6 +80,11 @@ body
   width: 50%;
 }
 
+.Cell-6
+{
+  height: 50%;
+}
+
 /* Common Modules */
 
 .Button--primary
@@ -190,6 +195,8 @@ body
 .GuessFlag-answers
 {
   margin-top: 2rem;
+  height: 0;
+  flex-grow: 1;
 }
 
 .GuessFlag-answer
